--- a/index.html
+++ b/index.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yibei Chen - Academic Portfolio</title>
+    <meta name="description" content="Research, publications, and open-source software by Yibei Chen." />
+    <link rel="canonical" href="https://yibeichan.github.io/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Yibei Chen" />
+    <meta property="og:title" content="Yibei Chen — Academic Portfolio" />
+    <meta property="og:description" content="Research, publications, and software." />
+    <meta property="og:url" content="https://yibeichan.github.io/" />
+    <meta property="og:image" content="/images/headshot.jpg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Yibei Chen — Academic Portfolio" />
+    <meta name="twitter:description" content="Research, publications, and software." />
+    <meta name="twitter:image" content="/images/headshot.jpg" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Yibei Chen",
+        "url": "https://yibeichan.github.io/"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
