Add SEO baseline: Helmet, meta tags, JSON-LD, sitemap, robots.txt (#12)
* chore(seo): add Helmet, route meta tags, JSON-LD, robots.txt, sitemap script; enable postbuild sitemap; lazy-load images; add contributor guide

* chore(seo): switch canonical, sitemap base, and robots to https://yibeichen.me; use absolute OG/Twitter images

* chore(domain): add CNAME for yibeichen.me and document custom-domain/SEO in README

* refactor(publications): render a single Helmet outside conditionals; tidy CNAME newline

* refactor(seo): add PageHelmet component and replace per-page Helmet usage for cleaner, consistent meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yibei Chen - Academic Portfolio</title>
+    <meta name="description" content="Research, publications, and open-source software by Yibei Chen." />
+    <link rel="canonical" href="https://yibeichen.me/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Yibei Chen" />
+    <meta property="og:title" content="Yibei Chen — Academic Portfolio" />
+    <meta property="og:description" content="Research, publications, and software." />
+    <meta property="og:url" content="https://yibeichen.me/" />
+    <meta property="og:image" content="https://yibeichen.me/images/headshot.jpg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Yibei Chen — Academic Portfolio" />
+    <meta name="twitter:description" content="Research, publications, and software." />
+    <meta name="twitter:image" content="https://yibeichen.me/images/headshot.jpg" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Yibei Chen",
+        "url": "https://yibeichen.me/"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
